# rust_tools

./: Cargo.toml
docs/手順書/: コードカバレッジの取得.md
rust/create_draft/: Cargo.toml
rust/create_draft/in/: mail_config.json
rust/mail_composer/: Cargo.toml
rust/mail_composer/config/: address_book.json  app.json
rust/mail_composer/data/: work_times.json
rust/mail_composer/logs/: work_start_time.json
rust/mail_composer/src/adapters/outbound/: json_address_book_adapter.rs  json_configuration_adapter.rs  json_work_time_adapter.rs
rust/mail_composer/src/application/usecases/: configuration_use_case.rs  mod.rs  remote_work_mail_use_case.rs
rust/mail_composer/src/domain/: mod.rs
rust/mail_composer/src/domain/entities/: mail_draft.rs  mod.rs  start_time_map.rs
rust/mail_composer/src/domain/interfaces/: address_book.rs  configuration.rs  mail_client.rs  mail_config.rs  mod.rs  work_time.rs
rust/mail_composer/src/domain/value_objects/: app_configuration.rs  email_address.rs  mail_config.rs  mail_objects.rs  mod.rs
rust/mail_composer/src/infrastructure/outbound/: json_address_book_adapter.rs  json_configuration_adapter.rs  json_mail_config_adapter.rs  json_work_time_adapter.rs  mod.rs  thunderbird_mail_client_adapter.rs
rust/share/: Cargo.toml
rust/share/src/error/: app_error.rs  error_conversions.rs  kind.rs  mod.rs
rust/share/src/utils/: workspace.rs
