[package]
name = "share"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.71"
calamine = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.16"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
